engine/tests/fixtures/invalid/http-api-semantics/cap-download.tg
capability cap_download_task_export {
  name "Download Export"
  description "Downloads export"

  actors [actor_user]
  reads [entity_task]
  input [shape_input_get_task_export_job]

  status active
}
